# sshop

./: README.md  pyproject.toml  sshop.tcss
sshop/: app.py  config.py  engine.py  modals.py
sshop/screens/: add_alias.py  add_edit.py  agent.py  backup.py  bootstrap.py  home.py  import_key.py  log.py  sftp.py  snippets.py  templates.py  tunnels.py
sshop/widgets/: stats_header.py
termio_tui/: config.py  modals.py
termio_tui/screens/: home.py
