[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sshop"
version = "0.1.0"
description = "Textual TUI frontend for okssh"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "paramiko>=3.0",
]

[project.scripts]
sshop = "sshop.app:main"

[tool.hatch.build.targets.wheel]
packages = ["sshop"]
